--- a/platformio.ini
+++ b/platformio.ini
@@ -11,8 +11,12 @@
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
+board_build.filesystem = littlefs
 framework = arduino
 lib_deps = 
 	tzapu/WiFiManager@^0.16.0
 	bblanchon/ArduinoJson@5.13.4
 	knolleary/PubSubClient@^2.8
+check_tool = clangtidy
+check_flags =
+  clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
