ignore package files during static analysis

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,8 @@ lib_deps =
 	bblanchon/ArduinoJson@5.13.4
 	knolleary/PubSubClient@^2.8
 check_tool = clangtidy
-check_flags =
-  clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
+check_flags = clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
+check_skip_packages = yes
+
+[platformio]
+description = RGB LED Strip for Domoticz using ESP8266. ESP firmware.
