--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,8 @@
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
+upload_port = COM6
+monitor_speed = 115200
 board_build.filesystem = littlefs
 framework = arduino
 lib_deps = 
