added unknown words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,8 @@
         "nodemcuv",
         "nvalue",
         "platformio",
+        "rgbstatus",
+        "RGBSTRIP",
         "SSID",
         "stapass",
         "stassid",
